updated opf with annotation transfer

--- a/f09439dcb2b04bd38e555c030ef0835d.opf/meta.yml
+++ b/f09439dcb2b04bd38e555c030ef0835d.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     4d18d7d6a5684dc1b218b6223860c228:
       base_file: v001.txt
       image_group_id: I1PD95846
-      title: ''
+      title: སྐུ་གསུམ་ལ་བསྟོད་པ་ཞེས་བྱ་བའི་རྣམ་པར་འགྲེལ་པ།
       total_pages: 1539
       volume_number: 1
